feat: wip analytics

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@unocss/eslint-config": "^0.53.5",
     "@unocss/nuxt": "^0.53.5",
     "@vueuse/core": "^10.2.1",
+    "@vueuse/integrations": "^10.2.1",
     "@vueuse/nuxt": "^10.2.1",
+    "chart.js": "^4.3.0",
     "consola": "^3.2.3",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
@@ -41,6 +43,7 @@
     "pino-pretty": "^10.0.1",
     "primevue": "^3.30.0",
     "prisma": "^5.0.0",
+    "qrcode": "^1.5.3",
     "resend": "^0.17.1",
     "sass": "^1.63.6",
     "simple-git-hooks": "^2.8.1",
