--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "std-env": "^3.3.3",
     "superjson": "^1.12.4",
     "trpc-nuxt": "^0.10.6",
+    "trpc-openapi": "^1.2.0",
     "vitepress": "1.0.0-beta.5",
     "vue": "^3.3.4",
     "vue-tsc": "^1.8.4",
