--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only --detach --wait-timeout 30000 -a wsa-tollbooth
+      - run: flyctl deploy --remote-only --detach --wait-timeout 30000
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
