--- a/fly.toml
+++ b/fly.toml
@@ -1,25 +1,49 @@
+app = "wsa-tollbooth"
+primary_region = "sin"
+
 kill_signal = "SIGINT"
 kill_timeout = 5
-mounts = []
-primary_region = "sin"
 processes = []
 
-[build]
-dockerfile = "./Dockerfile"
+[env]
+  PORT = "8080"
+
+[experimental]
+  allowed_public_ports = []
+  auto_rollback = true
 
 [[services]]
-internal_port = 3000
-processes = ["app"]
-protocol = "tcp"
-[services.concurrency]
-hard_limit = 10000
-soft_limit = 10000
-type = "connections"
+  internal_port = 8080
+  processes = ["app"]
+  protocol = "tcp"
+  script_checks = []
 
-[[services.ports]]
-handlers = ["http"]
-port = 80
+  [services.concurrency]
+    hard_limit = 25
+    soft_limit = 20
+    type = "requests"
 
-[[services.ports]]
-handlers = ["tls", "http"]
-port = 443
+  [[services.ports]]
+    handlers = ["http"]
+    port = 80
+    force_https = true
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 443
+
+  [[services.tcp_checks]]
+    grace_period = "1s"
+    interval = "15s"
+    restart_limit = 0
+    timeout = "2s"
+
+  [[services.http_checks]]
+    interval = "10s"
+    grace_period = "5s"
+    method = "get"
+    path = "/healthz"
+    protocol = "http"
+    timeout = "2s"
+    tls_skip_verify = false
+    [services.http_checks.headers]
