--- a/fly.toml
+++ b/fly.toml
@@ -42,7 +42,7 @@ processes = []
     interval = "10s"
     grace_period = "5s"
     method = "get"
-    path = "/healthz"
+    path = "/api/healthz"
     protocol = "http"
     timeout = "2s"
     tls_skip_verify = false
