--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@nuxt/devtools": "latest",
     "@nuxt/image": "1.0.0-rc.1",
     "@nuxtjs/html-validator": "^1.5.1",
+    "@nuxtjs/turnstile": "^0.5.0",
     "@prisma/client": "5.0.0",
     "@qingu/vue-email": "^1.0.23",
+    "@tanstack/vue-query": "^4.29.25",
     "@trpc/client": "^10.34.0",
     "@trpc/server": "^10.34.0",
     "@types/node": "^20.4.2",
@@ -58,6 +60,7 @@
     "unstorage": "^1.8.0",
     "vitepress": "1.0.0-beta.5",
     "vue": "^3.3.4",
+    "vue-email": "^0.4.0",
     "vue-tsc": "^1.8.4",
     "zod": "^3.21.4"
   },
