--- a/fly.toml
+++ b/fly.toml
@@ -1,5 +1,5 @@
 app = "wsa-tollbooth"
-primary_region = "sin"
+primary_region = "ams"
 
 kill_signal = "SIGINT"
 kill_timeout = 5
@@ -9,14 +9,14 @@ processes = []
 dockerfile = "./Dockerfile"
 
 [env]
-  PORT = "8080"
+  PORT = "3000"
 
 [experimental]
   allowed_public_ports = []
   auto_rollback = true
 
 [[services]]
-  internal_port = 8080
+  internal_port = 3000
   processes = ["app"]
   protocol = "tcp"
   script_checks = []
